--- a/stylesMeanings.css
+++ b/stylesMeanings.css
@@ -165,6 +165,10 @@ footer.is-active,
     .hamburger {
         display: none;
     }
+
+    body {
+        text-align: left;
+    }
 }
 
 /* MEANINGS PORTFOLIO lIST */
@@ -257,6 +261,10 @@ section a:hover {
 }
 
 @media screen and (max-width: 958px) {
+    body {
+        text-align: left;
+    }
+
     header {
         height: 80px;
     }
@@ -299,6 +307,10 @@ section a:hover {
     section h4 {
         width: 90%;
         margin-left: 20px;
+    }
+
+    section p {
+        text-align: justify;
     }
 }
 
